<?xml version="1.0"?>
<package format="2">
  <name>smart_home_launch</name>
  <version>0.0.1</version>
	<description>The collection of launch files for the smart home.</description>

	<maintainer email="rnvandemark@gmail.com">Nick Vandemark</maintainer>
	<license>Do_Whatever_You_Want</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>openni_launch</build_depend>
	<build_depend>smart_home_analg</build_depend>
	<build_depend>smart_home_hub</build_depend>
	<build_export_depend>openni_launch</build_export_depend>
	<build_export_depend>smart_home_analg</build_export_depend>
	<build_export_depend>smart_home_hub</build_export_depend>
	<exec_depend>openni_launch</exec_depend>
	<exec_depend>smart_home_analg</exec_depend>
	<exec_depend>smart_home_hub</exec_depend>
</package>
